--- a/GerenciadorEmprestimo.Data/GerenciadorEmprestimo.Data.csproj
+++ b/GerenciadorEmprestimo.Data/GerenciadorEmprestimo.Data.csproj
@@ -64,13 +64,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Entidades\GerenciadorEmprestimo.Entidades.csproj">
-      <Project>{05f314bd-96c7-478c-a479-b509dc549c00}</Project>
-      <Name>GerenciadorEmprestimo.Entidades</Name>
-    </ProjectReference>
     <ProjectReference Include="..\GerenciadorEmprestimo.Data.Interface\GerenciadorEmprestimo.Data.Interface.csproj">
       <Project>{63DF06AF-E82C-40CD-AC4C-A38C53A9D34F}</Project>
       <Name>GerenciadorEmprestimo.Data.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GerenciadorEmprestimo.Entidades\GerenciadorEmprestimo.Entidades.csproj">
+      <Project>{05f314bd-96c7-478c-a479-b509dc549c00}</Project>
+      <Name>GerenciadorEmprestimo.Entidades</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
