--- a/GerenciadorEmprestimo.Entidades/GerenciadorEmprestimo.Entidades.csproj
+++ b/GerenciadorEmprestimo.Entidades/GerenciadorEmprestimo.Entidades.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F11584AE-9801-4437-B99D-2D5A87C984DD}</ProjectGuid>
+    <ProjectGuid>{05F314BD-96C7-478C-A479-B509DC549C00}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GerenciadorEmprestimo.Business</RootNamespace>
-    <AssemblyName>GerenciadorEmprestimo.Business</AssemblyName>
+    <RootNamespace>GerenciadorEmprestimo.Entidades</RootNamespace>
+    <AssemblyName>GerenciadorEmprestimo.Entidades</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,23 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HistoricoBusiness.cs" />
-    <Compile Include="Interface\IHistoricoBusiness.cs" />
-    <Compile Include="Interface\IJogoBusiness.cs" />
-    <Compile Include="Interface\IPessoaBusiness.cs" />
-    <Compile Include="JogoBusiness.cs" />
-    <Compile Include="PessoaBusiness.cs" />
+    <Compile Include="EntidadeBase.cs" />
+    <Compile Include="HistoricoEmprestimo.cs" />
+    <Compile Include="Jogo.cs" />
+    <Compile Include="Pessoa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GerenciadorEmprestimo.Data.Interface\GerenciadorEmprestimo.Data.Interface.csproj">
-      <Project>{63df06af-e82c-40cd-ac4c-a38c53a9d34f}</Project>
-      <Name>GerenciadorEmprestimo.Data.Interface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GerenciadorEmprestimo.Entidades\GerenciadorEmprestimo.Entidades.csproj">
-      <Project>{05f314bd-96c7-478c-a479-b509dc549c00}</Project>
-      <Name>GerenciadorEmprestimo.Entidades</Name>
-    </ProjectReference>
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
